welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {	
  var t = new Array[Int](num)
  t(0)=1
  var compteur = 1
  var valeur = 2
  var repetition = 0
  while(compteur < num){
    repetition = t(valeur)
    if(compteur + repetition - 1 < num -1){
      for(i<- compteur to compteur + repetition -1){
        t(i)=valeur
        compteur += 1
      }
      valeur += 1
    }else{
      for(j<- compteur to num -1){
        t(j)=valeur
        compteur += 1
      }
    }
  }
}